# ai-os

./: .gitignore  LICENSE  README.md  SKILL.md  git-push.ps1  pyproject.toml  requirements.txt  sync-to-skills.ps1
aios/: deploy.py  web_app.py
aios/core/scheduler/: __init__.py
aios/deploy/: AI_OS_进度报告.md  ARCHITECTURE_WORKBUDDY_INTEGRATION.md  README.md  aios_cli.py  integration_test_all_adapters.py  launch_aios.py  skill.yaml  test_integration_simple.py  启动AIOS.bat
aios/deploy/integration/: dragon_brain_adapter.py
aios/deploy/memory/: memory_manager.py  retrieval_optimizer.py  skill_history.py  test_memory.py
aios/deploy/scheduler/: engine_router.py  scheduler_main.py
aios/deploy/skills/: parameter_handler.py  skill_invoker.py
aios/integration/: dragon_claw_adapter.py  dragon_heart_adapter.py  five_elements_adapter.py
aios/memory/: auto_archiver.py  memory_manager.py
aios/scheduler/: core_aios_scheduler.py  core_process_manager.py  core_resource_monitor.py  dynamic_adjuster.py  evolution_precipitator.py  intent_recognizer.py  result_integrator.py  scene_classifier.py  scheduler_main.py
aios/services/dragonbrain/: model_router.py
aios/skills/: error_handler.py  skill_discovery.py  skill_invoker.py  test_skill_layer.py
aios/tests/: test_cli_imports.py  test_comprehensive_scenario.py  test_skill_recommendation.py  verify_scheduler.py
docs/: AI_OS_进度报告.md  ARCHITECTURE.md  优化现有Skills指南.md  用户测试指南.md
docs/skills/凤脑OS.skills/: SKILL.md
skills/ai-os/: CHANGELOG.md  SKILL.md  skill.yaml
skills/ai-os/orchestrator/: __init__.py  coordinator.py
(+6 files in other folders)
